moved UI js to other file

--- a/index.html
+++ b/index.html
@@ -2,50 +2,6 @@
 <html lang="en">
 
 <head>
-    <script type="text/javascript">
-        if (!Array.prototype.find) {
-            Object.defineProperty(Array.prototype, "find", {
-                value: function (predicate) {
-                    if (this === null) {
-                        throw new TypeError('Array.prototype.find called on null or undefined');
-                    }
-                    if (typeof predicate !== 'function') {
-                        throw new TypeError('predicate must be a function');
-                    }
-                    var list = Object(this);
-                    var length = list.length >>> 0;
-                    var thisArg = arguments[1];
-                    var value;
-
-                    for (var i = 0; i < length; i++) {
-                        value = list[i];
-                        if (predicate.call(thisArg, value, i, list)) {
-                            return value;
-                        }
-                    }
-                    return undefined;
-                }
-            });
-        }
-
-        function compare(a, b) {
-            if (a > b) return 1;
-            if (a < b) return -1;
-            return 0;
-        }
-    </script>
-    <script src="inc/midi-parser.js"></script>
-    <script src="inc/maker.js"></script>
-    <script src="inc/scaleandmusicbox.js">
-
-    </script>
-    <script src="inc/processing.js">
-
-    </script>
-    <script src="inc/drawing.js">
-
-    </script>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -323,82 +279,43 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function () {
-            $("#units").change(function () {
-                if ($("#units option:selected").text() == "Inches") {
-                    $('.unit-suffix').text('in');
-                } else {
-                    $('.unit-suffix').text('mm');
+        if (!Array.prototype.find) {
+            Object.defineProperty(Array.prototype, "find", {
+                value: function (predicate) {
+                    if (this === null) {
+                        throw new TypeError('Array.prototype.find called on null or undefined');
+                    }
+                    if (typeof predicate !== 'function') {
+                        throw new TypeError('predicate must be a function');
+                    }
+                    var list = Object(this);
+                    var length = list.length >>> 0;
+                    var thisArg = arguments[1];
+                    var value;
+
+                    for (var i = 0; i < length; i++) {
+                        value = list[i];
+                        if (predicate.call(thisArg, value, i, list)) {
+                            return value;
+                        }
+                    }
+                    return undefined;
                 }
-
             });
+        }
 
-            $("input:file").change(function () {
-                var fileName = $(this).val();
-                $("#midi-file").val(fileName.substring(fileName.lastIndexOf("\\") + 1, fileName.length));
-            });
-
-            $("#line-color").change(function () {
-                var lineColor = $(this).val().toUpperCase();
-                $("#color-suffix").text(lineColor);
-            });
-
-            $("#export-settings").click(function () {
-                var settings = {
-                    units: $("#units option:selected").text(),
-                    workpieceWidth: $("#workpiece-width").val(),
-                    workpieceHeight: $("#workpiece-height").val(),
-                    startingEdge: $("#starting-edge option:selected").text(),
-                    jointEdge: $("#joint-edge option:selected").text(),
-                    endingEdge: $("#ending-edge option:selected").text(),
-                    holeShape: $("#hole-shape option:selected").text(),
-                    holeWidth: $("#hole-width").val(),
-                    holeHeight: $("#hole-height").val(),
-                    scale: $("#scale option:selected").text(),
-                    scaleType: $("#scale-type option:selected").text(),
-                    scaleMode: $("#scale-mode option:selected").text(),
-                    amountOfPins: $("#amount-of-pins").val(),
-                    horizontalMargins: $("#horizontal-margins").val(),
-                    verticalMargins: $("#vertical-margins").val(),
-                    exportFormat: $("#export-format option:selected").text(),
-                    lineColor: $("#line-color").val()
-                }
-                json_export = JSON.stringify(settings);
-                console.log(settings);
-                console.log(json_export);
-                uriContent = "data:application/octet-stream," + encodeURIComponent(json_export);
-                newWindow = window.open(uriContent, 'neuesDokument');
-            });
-
-            //MIDIParser.addListener(document.getElementById('file-picker-midi'), function (data) { prepareFiles(data) });
-            //console.log("listener added");
-
-            $("#show-preview").click(function () {
-                loadFile();
-                $("#download-btn").prop('disabled', false)
-            });
-
-            $("#download-btn").click(function () {
-                var value = document.getElementById('export-format').options[document.getElementById('export-format').selectedIndex].value;
-                downloadFile('data.' + value, fileTexts[value]);
-            });
-
-            function loadFile() {
-                file = $('#file-picker-midi')[0].files[0];
-                if (!file){
-                    console.log("No file selected")
-                    return false;
-                }
-                console.log('Uploading file detected in INPUT ELEMENT, processing data..');
-                var reader = new FileReader();
-                reader.readAsArrayBuffer(file);
-                reader.onload = function (e) {
-                    console.log(e.target.result);
-                    prepareFiles( MIDIParser.Uint8(new Uint8Array(e.target.result)));
-                };
-            }
-        });
+        function compare(a, b) {
+            if (a > b) return 1;
+            if (a < b) return -1;
+            return 0;
+        }
     </script>
+    <script src="inc/user-interface.js"></script>
+    <script src="inc/midi-parser.js"></script>
+    <script src="inc/maker.js"></script>
+    <script src="inc/scaleandmusicbox.js"></script>
+    <script src="inc/processing.js"></script>
+    <script src="inc/drawing.js"></script>
 </body>
 
 </html>
