nicer preview placement

--- a/index.html
+++ b/index.html
@@ -230,13 +230,18 @@
 
                 <button type="button" id="import-settings" class="btn btn-default">Import settings</button>
                 <button type="button" id="export-settings" class="btn btn-default pull-right">Export settings</button>
-                <button type="button" id="show-preview" class="btn btn-default">show-preview</button>
             </div>
         </div>
         <!-- /.row -->
 
         <div class="row">
-            <div class="text-center" style="width:100%;height:300px;border:1px solid black;">Preview comes here</div>
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <button type="button" id="show-preview" class="btn btn-primary">show-preview</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="text-center" style="width:100%;height:300px;border:1px solid black;margin-top:20px;">Preview comes here</div>
         </div>
 
         <div id="export-row" class="row">
