--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
 
         <div class="row">
             <div class="col-md-4">
-                                <div class="form-group">
+				<div class="form-group">
                     <label for="strip-height">Strip height</label>
                     <div class="input-group">
-                        <input type="number" class="form-control" id="strip-height" value="60" min="0" step="1" max="10000">
+                        <input type="number" class="form-control" id="strip-height" value="70" min="0" step="1" max="10000">
                         <span class="input-group-addon unit-suffix">mm</span>
                     </div>
                 </div>
@@ -215,14 +215,14 @@
                 <div class="form-group">
                     <label for="horizontal-margins">Horizontal margins</label>
                     <div class="input-group">
-                        <input type="number" class="form-control" id="horizontal-margins" value="5" min="0" step="1" max="10000">
+                        <input type="number" class="form-control" id="horizontal-margins" value="50" min="0" step="1" max="10000">
                         <span class="input-group-addon unit-suffix">mm</span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="vertical-margins">Vertical margins</label>
                     <div class="input-group">
-                        <input type="number" class="form-control" id="vertical-margins" value="5" min="0" step="1" max="10000">
+                        <input type="number" class="form-control" id="vertical-margins" value="6.5" min="0" step="1" max="10000">
                         <span class="input-group-addon unit-suffix">mm</span>
                     </div>
                 </div>
@@ -235,12 +235,12 @@
 
         <div class="row">
             <div class="col-md-4 col-md-offset-4 text-center">
-                <button type="button" id="show-preview" class="btn btn-primary">show-preview</button>
+                <button type="button" id="show-preview" class="btn btn-primary">Show Preview</button>
             </div>
         </div>
 
         <div class="row">
-            <div class="text-center" style="width:100%;height:300px;border:1px solid black;margin-top:20px;">Preview comes here</div>
+            <div class="text-center" id="preview-box" style="width:100%;height:300px;border:0;margin-top:20px;overflow-x:scroll;"></div>
         </div>
 
         <div id="export-row" class="row">
