--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                     <select id="export-format" class="selectpicker form-control">
                         <option value="svg">SVG</option>
                         <option value="dxf">DXF</option>
+						<option value="txt">Plain Text</option>
                     </select>
                 </div>
             </div>
