We only support C Major for now, so let's not give anybody the choice to choose any other scale

--- a/index.html
+++ b/index.html
@@ -174,16 +174,11 @@
                     <label for="scale">Scale</label>
                     <select id="scale" class="selectpicker form-control">
                         <option>C</option>
-                        <option>D</option>
-                        <option>E</option>
-                        <option>F</option>
-                        <option>G</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="scale-type">Scale type</label>
                     <select id="scale-type" class="selectpicker form-control">
-                        <option>Minor</option>
                         <option>Major</option>
                     </select>
                 </div>
@@ -207,7 +202,7 @@
                 </div>
                 <div class="form-group">
                     <label for="current-scale">Current scale</label>
-                    <input type="text" class="form-control" id="current-scale" value="C D Eb F G Ab Bb" readonly>
+                    <input type="text" class="form-control" id="current-scale" value="C D E F G A B" readonly>
                 </div>
             </div>
 
