--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@
                 </div>
 
                 <button type="button" id="import-settings" class="btn btn-default">Import settings</button>
+                <input id="file-picker-import-settings" style="display: none;" type="file">
+
                 <button type="button" id="export-settings" class="btn btn-default pull-right">Export settings</button>
             </div>
         </div>
