--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Tool to create music box sheets from midi by converting them to a laser cutter file.">
     <meta name="author" content="">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <title>Midi to lasercutter</title>
 
