--- a/experimental/sandbox/index.html
+++ b/experimental/sandbox/index.html
@@ -8,6 +8,36 @@
 
     <script src="inc/devices.js"></script>
     <script src="inc/render.js"></script>
+    <script type="application/javascript">
+
+        window.onload = function () {
+
+            var fileBtn = document.getElementById('file-picker-midi');
+            fileBtn.addEventListener('change', function () {
+                loadMidiFile(this.files[0]);
+            });
+
+            var deviceSelect = document.getElementById('device-select');
+            deviceSelect.addEventListener('change', setDevice);
+
+            //var displaySelect = document.getElementById('display-select');
+            //displaySelect.addEventListener('change', changeRenderType);
+
+            var viewControls = document.getElementById('view-controls');
+            viewControls.addEventListener('click', changeRenderType);
+
+            var pianoRoll = document.getElementById("piano-roll");
+
+            workingTrack = new MidiTrack();
+            screenDevice = new Device("screen");
+
+            initializeScreenDevice(screenDevice);
+            renderTrack(pianoRoll, workingTrack, screenDevice);
+
+
+        };
+
+    </script>
 
     <link rel="stylesheet" href="styles/styles.css">
 
