Added secondary view

--- a/experimental/sandbox/index.html
+++ b/experimental/sandbox/index.html
@@ -111,6 +111,11 @@
 
         </div>
     </div>
+    <div id="other-view">
+        <div id="secondary-view">
+
+        </div>
+    </div>
 
 </div>
 </body>
