--- a/dev/midi_libraries/midi_parser.html
+++ b/dev/midi_libraries/midi_parser.html
@@ -2,65 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Midi-Parser Object Viewer</title>
-    <style type="text/css">
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 100%;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-        }
-
-        #container {
-            position: relative;
-            width: 85%;
-            min-height: 720px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 20px;
-            padding: 20px;
-        }
-
-        #controls {
-            position: relative;
-            width: 16%;
-            float: left;
-        }
-
-        #output {
-            position: relative;
-            border: 1px solid darkgray;
-            float: right;
-            width: 75%;
-            min-height: 680px;
-            border-radius: 10px;
-            background-color: white;
-            padding: 20px;
-        }
-
-        h1 {
-            margin-top: 0;
-            font-size: 1em;
-        }
-
-        p {
-
-            width: 100px;
-            height: 40px;
-            display: block;
-
-            font-size: 0.6em;
-        }
-
-        #json-view {
-            position: relative;
-            width: 99%;
-            min-height: 680px;
-            overflow: scroll;
-        }
-
-    </style>
+    <title>midi-parser.js Object Viewer</title>
+    <link rel="stylesheet" href="styles/styles.css">
 
     <script src="inc/midi-parser.js"></script>
 
@@ -97,6 +40,7 @@
 
     </script>
 
+
 </head>
 <body>
 <div id="container">
@@ -104,6 +48,7 @@
         <h1>midi-parser.js object viewer</h1>
         <input id="file-input" type="file"/>
         <p>Load a MIDI file. A JSON reprsentation of the parsed MIDI will be displayed below.</p>
+        <a href="https://github.com/colxi/midi-parser-js">mid-parser.js GitHub</a>
 
     </div>
     <div id="output">
