--- a/dev/midi_libraries/midi_parser.html
+++ b/dev/midi_libraries/midi_parser.html
@@ -43,7 +43,11 @@
 
 </head>
 <body>
+<header>
+    <a href="midi_parser.html">midi-parser.js</a><a href="MidiConvert.html">midi-parser.js</a>
+</header>
 <div id="container">
+
     <div id="controls">
         <h1>midi-parser.js object viewer</h1>
         <input id="file-input" type="file"/>
