--- a/dev/midi_libraries/MidiConvert.html
+++ b/dev/midi_libraries/MidiConvert.html
@@ -43,6 +43,9 @@
 
 </head>
 <body>
+<header>
+    <a href="midi_parser.html">midi-parser.js</a><a href="MidiConvert.html">midi-parser.js</a>
+</header>
 <div id="container">
     <div id="controls">
         <h1>MidiConvert.js object viewer</h1>
