--- a/dev/midi_libraries/MidiConvert.html
+++ b/dev/midi_libraries/MidiConvert.html
@@ -44,7 +44,7 @@
 </head>
 <body>
 <header>
-    <a href="midi_parser.html">midi-parser.js</a><a href="MidiConvert.html">midi-parser.js</a>
+    <a href="index.html">Home</a><a href="midi_parser.html">midi-parser.js</a><a href="MidiConvert.html">midi-parser.js</a>
 </header>
 <div id="container">
     <div id="controls">
