Fixed link text

--- a/dev/midi_libraries/index.html
+++ b/dev/midi_libraries/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <a href="index.html">Home</a><a href="midi_parser.html">midi-parser.js</a><a href="MidiConvert.html">midi-parser.js</a>
+    <a href="index.html">Home</a><a href="midi_parser.html">midi-parser.js</a><a href="MidiConvert.html">MidiConvert.js</a>
     <p>Simple pages to test the output in JSON format of each midi parsing library</p>
 </header>
 </body>
