--- a/experimental/sandbox/index.html
+++ b/experimental/sandbox/index.html
@@ -7,6 +7,7 @@
     <script src="inc/midi-parser.js"></script>
 
     <script src="inc/devices.js"></script>
+    <script src="inc/scalesandnotes.js"></script>
     <script src="inc/render.js"></script>
 
     <script type="application/javascript">
@@ -56,6 +57,7 @@
     </script>
 
     <link rel="stylesheet" href="styles/styles.css">
+
 
 
 </head>
