Started process of changing device channel references to device slots

--- a/experimental/sandbox/device_and_layout.html
+++ b/experimental/sandbox/device_and_layout.html
@@ -670,7 +670,7 @@
             </div>
             <div id="device-channels">
                 <div id="device-channels-header">
-                    <p>Channels</p>
+                    <p>Device Slots</p>
                 </div>
                 <div id="channel-columns">
                     <p class="channel-column channel-noteNumber">Note Number</p>
@@ -690,7 +690,7 @@
                         <input id="channel-add-offset" class="channel-offset" min="0" max="1000" step="0.01" type="number" value="0">
                         <input id="channel-add-height" class="channel-height" min="0" max="1000" step="0.01" type="number" value="0">
                     </div>
-                    <input id="device-channels-add" class="channel-add" type="button" value="Add Channel"/>
+                    <input id="device-channels-add" class="channel-add" type="button" value="Add Device Slot"/>
                 </div>
             </div>
             <div id="device-dimensions">
@@ -722,7 +722,7 @@
                 </div>
 
                 <div id="hole-settings">
-                    <label id="device-channelHeight-label" for="device-channelHeight" class="dimension-label">Channel
+                    <label id="device-channelHeight-label" for="device-channelHeight" class="dimension-label">Slot
                         Height
                         <input id="device-channelHeight" type="number" min="0" max="1000" value="3" step="0.01"/>
                     </label>
@@ -748,7 +748,7 @@
                 <input id="new-device-id" type="text"/>
             </label>
 
-            <label id="new-device-channel-count-label" for="new-device-channel-count">Num Channels
+            <label id="new-device-channel-count-label" for="new-device-channel-count">Num Slots
                 <input id="new-device-channel-count" type="number" min="0" max="128" step="1" value="1"/>
             </label>
 
