only accept .mid and .midi

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <div class="input-group">
                         <label class="input-group-btn">
                         <span class="btn btn-default">
-                            Browse <input id="file-picker-midi" style="display: none;" type="file">
+                            Browse <input id="file-picker-midi" style="display: none;" type="file" accept=".midi,.mid">
                         </span>
                     </label>
                         <input id="midi-file" class="form-control" readonly type="text">
