--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -224,9 +224,67 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="text-center" id="preview-box">
-                <svg id="preview"></svg>
+        <div id="preview-box" class="row">
+            <div class="col-md-1">
+
+                <div class="row">
+                    <div class="col-md-1">
+                        <div class="form-group">
+                            <select id="note1">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                        <div class="form-group">
+                            <select id="note2">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                        <div class="form-group">
+                            <select id="note3">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                        <div class="form-group">
+                            <select id="note4">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1">
+                        <div class="form-group">
+                            <select id="note5">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-11">
+                <svg id="preview" width="600mm" height="300mm" version="1.1" xmlns="http://www.w3.org/2000/svg"></svg>
             </div>
         </div>
 
@@ -288,18 +346,18 @@
                     <h4 class="modal-title" id="trackModalLabel">Choose track</h4>
                 </div>
                 <form id="selectTrackForm" role="form">
-                <div class="modal-body">
-                    
+                    <div class="modal-body">
+
                         <div class="form-group">
                             <label for="trackPicker">Pick track</label>
                             <select id="trackPicker" class="selectpicker form-control" name="track"></select>
                         </div>
-                </div>
-                <div class="modal-footer">
-                    
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
+                    </div>
+                    <div class="modal-footer">
+
+                        <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
                 </form>
             </div>
         </div>
