--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -221,6 +221,9 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-4 text-center">
                 <button type="button" id="show-preview" class="btn btn-primary">Show Preview</button>
+                <button type="button" id="play" class="btn btn-primary">Play</button>
+                <button type="button" id="pause" class="btn btn-primary">Pause</button>
+                <button type="button" id="stop" class="btn btn-primary">Stop</button>
             </div>
         </div>
 
@@ -375,6 +378,7 @@
     <!-- Bootstrap select -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
     <script src="MidiConvert.js"></script>
+    <script src="Tone.min.js"></script>
     <script src="snap.svg-min.js"></script>
     <script src="user-interface.js"></script>
 </body>
