--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -380,6 +380,7 @@
     <script src="MidiConvert.js"></script>
     <script src="Tone.min.js"></script>
     <script src="snap.svg-min.js"></script>
+    <script src="snap.svg.zpd.js"></script>
     <script src="user-interface.js"></script>
 </body>
 
